# note-taking-app

./: .gitignore  Cargo.toml  README.md
frontend/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/components/: Card.svelte  Counter.svelte  CreateCard.svelte  EditableCard.svelte  Footer.svelte  Header.svelte
frontend/src/lib/: types.ts  utils.ts
migrations/2022-08-13-184119_create_notes/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
